# coco

./: .gitignore  LICENSE  README.md  coco-architecture.md  coco-description.md  coco-ui-spec.md
.github/workflows/: release.yaml
app/: .eslintrc.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
app/scripts/: bump-version.sh  redeploy.sh
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: error.rs  lib.rs  main.rs
app/src-tauri/src/adapters/: mod.rs  postgres.rs  traits.rs
app/src-tauri/src/adapters/mock/: mod.rs
app/src-tauri/src/commands/: adapters.rs  blockchains.rs  chains.rs  contract_docs.rs  conversations.rs  env.rs  mod.rs  preferences.rs  runs.rs  scripts.rs  wallets.rs  workflows.rs  workspaces.rs
app/src-tauri/src/db/: mod.rs
app/src-tauri/src/services/: blockchain_service.rs  chain_service.rs  contract_doc_service.rs  conversation_service.rs  env_service.rs  mod.rs  preference_service.rs  run_service.rs  script_service.rs  wallet_service.rs  workflow_service.rs  workspace_service.rs
app/src-tauri/src/types/: mod.rs
app/src/app/: layout.tsx  page.tsx
app/src/components/: providers.tsx
app/src/contexts/: chain-context.tsx  index.ts  router-context.tsx  workspace-context.tsx
app/src/data/: chain-registry.ts  themes.ts
app/src/hooks/: index.ts  use-blockchains.ts  use-chains.ts  use-contract-docs.ts  use-contracts.ts  use-env-vars.ts  (+7 more)
landing-page/: package-lock.json  package.json  tailwind.config.ts
(+154 files in other folders)
