[package]
name = "coco"
version = "0.1.0"
description = "Blockchain Development Workstation"
authors = ["Coco Team"]
edition = "2021"

[lib]
name = "coco_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-decorum = "1"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "postgres", "tls-rustls", "json", "chrono"] }
hex = "0.4"
rand = "0.8"

# Chain-specific dependencies
ethers = "2"
walkdir = "2"

# Crypto
aes-gcm = "0.10"
argon2 = "0.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
